youtubeからなにをimportするかを決めれるようにした&動画プレイヤーから視聴済みにできるようにした
