# shared/api/v1/openapi.yaml
@@ -184,6 +184,19 @@ paths:
       description: YouTubeアカウントと連携するためのOAuth認証を開始する
       operationId: getAuthOauthYoutube
       tags: [ auth ]
+      parameters:
+        - name: subscriptions
+          in: query
+          required: false
+          description: チャンネル登録をインポートするかどうか
+          schema:
+            type: boolean
+        - name: likes
+          in: query
+          required: false
+          description: 高評価動画をインポートするかどうか
+          schema:
+            type: boolean
       responses:
         "302":
           description: 302 redirect
@@ -1282,7 +1295,10 @@ paths:
                   external_channel_subscribers_count:
                     type: integer
                     minimum: 0
-                required: [ video_id, external_video_id, external_video_title, external_video_description, external_video_thumbnail_url, external_video_created_at, channel_id, external_channel_display_name, channel_custom_id, external_channel_subscribers_count, external_channel_icon_url ]
+                  is_watched:
+                    type: boolean
+                    description: ユーザーが視聴済みかどうか
+                required: [ video_id, external_video_id, external_video_title, external_video_description, external_video_thumbnail_url, external_video_created_at, channel_id, external_channel_display_name, channel_custom_id, external_channel_subscribers_count, external_channel_icon_url, is_watched ]
         "400":
           $ref: "#/components/responses/BadRequest"
         "401":
